--- a/Login page full stack/public/index.html
+++ b/Login page full stack/public/index.html
@@ -16,9 +16,14 @@
         </nav>
     </div>
     <form id="regForm">
+        <label for="name">Name:</label><br>
         <input id="name" placeholder="Name" required><br><br>
+        <label for="email">Email:</label><br>
         <input id="email" placeholder="Email" required><br><br>
+        <label for="password">Password:</label><br>
         <input id="password" placeholder="Password" required><br><br>
+        <label for="confirmPassword">Confirm Password:</label><br>
+        <input id="confirmPassword" placeholder="Confirm Password" required><br><br>
         <button type="submit">Submit</button>
     </form>
     <div>
