--- a/STUDENT-INFO/PUBLIC/index.html
+++ b/STUDENT-INFO/PUBLIC/index.html
@@ -11,7 +11,7 @@
         <nav class="nav">
             <h1>
                 studend info pages </h1>
-            <li>
+            <li style="color: white; text-decoration-line: none; font-size: 30px; text-transform: capitalize; justify-content: space-between;">
                 <a href="home">home</a>
                 <a href="about">about</a>
                 <a href="student">student</a>
